<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    tools:context=".MainActivity">

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      android:background="?colorPrimary"/>


  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

      <android.support.design.widget.TextInputLayout
          android:id="@+id/username_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            android:inputType="textPersonName|textAutoCorrect"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/email_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textAutoCorrect|textEmailAddress"
            android:lines="1"
            android:singleLine="true"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/password_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/confirm_password_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            android:inputType="textPassword"/>
      </android.support.design.widget.TextInputLayout>


      <android.support.v7.widget.AppCompatButton
          android:id="@+id/submit_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:background="#ff428bca"
          android:gravity="center"
          android:padding="6dp"
          android:text="@string/submit"
          android:textColor="#fff"
          android:textSize="20sp"/>
    </LinearLayout>
  </android.support.v7.widget.CardView>

</RelativeLayout>
