<resources>

  <string name="app_name">Android-Testing</string>

  <string name="title_activity_home">HomeActivity</string>
  <string name="title_activity_sign_in">SignInActivity</string>
  <string name="title_activity_client_detail">ClientDetailActivity</string>

  <string name="sign_in">Sign In</string>
  <string name="submit">Submit</string>
  <string name="home">Home</string>
  <string name="prof_pic">profile picture</string>
  <string name="client_details">Client Details</string>

  <string name="action_logout">Logout</string>
  <string name="action_settings">Settings</string>

  <string name="error_empty_email">Email is empty</string>
  <string name="error_empty_password">Password is empty</string>
  <string name="error_invalid_email">Email is Invalid</string>
  <string name="error_password_min_len">Password should be of minimum 6 characters</string>
  <string name="title_activity_test">TestActivity</string>

  <string name="hello_world">Hello world!</string>
</resources>
