<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    tools:context=".MainActivity">

  <include layout="@layout/include_toolbar"/>


  <android.support.v7.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_marginLeft="20dp"
      android:layout_marginRight="20dp"
      app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

      <android.support.design.widget.TextInputLayout
          android:id="@+id/email_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textAutoCorrect|textEmailAddress"
            android:lines="1"
            android:singleLine="true"/>
      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
          android:id="@+id/password_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword"/>
      </android.support.design.widget.TextInputLayout>


      <android.support.v7.widget.AppCompatButton
          android:id="@+id/sign_in_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:background="#ff428bca"
          android:gravity="center"
          android:padding="6dp"
          android:text="@string/sign_in"
          android:textColor="#fff"
          android:textSize="20sp"/>
    </LinearLayout>
  </android.support.v7.widget.CardView>

  <android.support.v7.widget.AppCompatTextView
      android:id="@+id/sign_up"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:gravity="center"
      android:padding="8dp"
      android:text="Don't have and account?\nSign Up"
      android:textSize="18sp"/>

</RelativeLayout>