<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rajeshbatth.android_testing.core.home.HomeActivity">

  <include layout="@layout/include_toolbar"/>

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <ListView
        android:id="@+id/clients_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/content_loading_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
  </FrameLayout>

</LinearLayout>
